--- a/locale/de_DE/editor.xml
+++ b/locale/de_DE/editor.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
 <!--
@@ -20,13 +20,14 @@
 	<message key="editor.monograph.enterReviewerRecommendation">Empfehlung der Gutachterin/des Gutachters eintragen</message>
 	<message key="editor.monograph.recommendation">Empfehlung</message>
 	<message key="editor.monograph.selectReviewerInstructions">Wählen Sie oben einen Gutachter/eine Gutachterin aus und klicken Sie auf 'Gutachter/in auswählen'.</message>
+	<message key="editor.submission.selectedReviewer">Ausgewählte Gutachter/innen</message>
 	<message key="editor.monograph.replaceReviewer">Gutachter/innen ersetzen</message>
-	<message key="editor.monograph.editorToEnter">Redakteur/in gibt Empfehlungen/Kommentare für Gutachter/in ein</message>
+	<message key="editor.monograph.editorToEnter">Der Herausgeber/die Herausgeberin gibt Empfehlungen/Kommentare für Gutachter/in ein</message>
 	<message key="editor.monograph.uploadReviewForReviewer">Gutachten hochladen</message>
 	<message key="editor.monograph.peerReviewOptions">Gutachten-Optionen</message>
 	<message key="editor.monograph.selectProofreadingFiles">Korrekturfahnen-Dateien</message>
 	<message key="editor.monograph.internalReview">Interne Begutachtung starten</message>
-	<message key="editor.monograph.internalReviewDescription">Sie starten hiermit das interne Begutachtungsverfahren. Dateien, die Teil des eingereichten Manuskripts sind, finden Sie unten aufgelistet und können von Ihnen zur Begutachtung ausgewählt werden.</message>
+	<message key="editor.monograph.internalReviewDescription">Sie starten hiermit das interne Begutachtungsverfahren. Dateien, die Teil des eingereichten Manuskripts sind, finden Sie hier aufgelistet und können von Ihnen zur Begutachtung ausgewählt werden.</message>
 	<message key="editor.monograph.externalReview">Externe Begutachtung starten</message>
 	<message key="editor.submissions.lastAssigned">Letzte</message>
 	<message key="editor.monograph.final.selectFinalDraftFiles">Endfassungen auswählen</message>
@@ -36,18 +37,18 @@
 	
 	<!-- Editorial Legend -->
 	<message key="editor.monograph.legend.submissionActions">Einreichungsaktionen</message>
-	<message key="editor.monograph.legend.submissionActionsDescription">Während der Einreichung mögliche Aktionen und Optionen</message>
+	<message key="editor.monograph.legend.submissionActionsDescription">Aktionen und Optionen, die während des Einreichungsprozesses vorgenommen werden können</message>
 	<message key="editor.monograph.legend.sectionActions">Sektionsaktionen</message>
-	<message key="editor.monograph.legend.sectionActionsDescription">Für eine bestimmte Sektion spezifische Optionen, z.B. Dateien hochladen oder Benutzer/innen hinzufügen.</message>
-	<message key="editor.monograph.legend.itemActions">Auf den Titel bezogene Aktionen</message>
-	<message key="editor.monograph.legend.itemActionsDescription">Für eine individuelle Datei spezifische Aktionen und Optionen.</message>
+	<message key="editor.monograph.legend.sectionActionsDescription">Sektionsspezifische Optionen, z.B. Dateien hochladen oder Benutzer/innen hinzufügen.</message>
+	<message key="editor.monograph.legend.itemActions">Titelbezogene Aktionen</message>
+	<message key="editor.monograph.legend.itemActionsDescription">Dateispezifische Aktionen und Optionen.</message>
 	<message key="editor.monograph.legend.catalogEntry">Katalogeintrag anschauen und verwalten (einschließlich Metadaten und Formate)</message>
 	<message key="editor.monograph.legend.bookInfo">Metadaten, Anmerkungen, Benachrichtigungen sowie das Verlaufsprotokoll zu einem Manuskript anschauen und verwalten</message>
-	<message key="editor.monograph.legend.participants">Die an der Manuskriptbearbeitung Beteiligten wie z.B. Autor/innen, Redakteur/innen, Layouter/innen ansehen und verwalten</message>
+	<message key="editor.monograph.legend.participants">An der Manuskriptbearbeitung beteiligte Nutzer wie z.B. Autor/innen, Redakteur/innen, Layouter/innen ansehen und verwalten</message>
 	<message key="editor.monograph.legend.add">Eine Datei in dieser Sektion hochladen</message>
-	<message key="editor.monograph.legend.add_user">Zu dieser Sektion einen Benutzer hinzufügen</message>
-	<message key="editor.monograph.legend.settings">Ansicht und Zugang zu den Einstellungen wie zum Beispiel für die Informations- und Löscheinstellungen.</message>
-	<message key="editor.monograph.legend.more_info">Weitere Informationen: Anmerkungen zu den Dateien, Benachrichtigungsoptionen und Verlaufsprotokoll</message>
+	<message key="editor.monograph.legend.add_user">Dieser Sektion einen Benutzer hinzufügen</message>
+	<message key="editor.monograph.legend.settings">Zugang zu den Einstellungen (zum Beispiel Informations- und Löscheinstellungen).</message>
+	<message key="editor.monograph.legend.more_info">Weitere Informationen: Anmerkungen zu Dateien, Benachrichtigungsoptionen und Verlaufsprotokoll</message>
 	<message key="editor.monograph.legend.notes_none">Datei-Informationen: Anmerkungen, Benachrichtigungsoptionen und Verlaufsprotokoll (bisher wurden noch keine Anmerkungen hinzufügt)</message>
 	<message key="editor.monograph.legend.notes">Datei-Informationen: Anmerkungen, Benachrichtigungsoptionen und Verlauf (es liegen Anmerkungen vor)</message>
 	<message key="editor.monograph.legend.notes_new">Datei-Informationen: Anmerkungen, Benachrichtigungsoptionen und Verlauf (seit dem letzten Besuch wurden Anmerkungen hinzugefügt)</message>
@@ -55,26 +56,26 @@
 	<message key="editor.monograph.legend.delete">Titel entfernen</message>
 	<message key="editor.monograph.legend.in_progress">Aktion wird noch ausgeführt oder ist noch nicht vollständig</message>
 	<message key="editor.monograph.legend.complete">Aktion vollständig</message>
-	<message key="editor.monograph.legend.uploaded">File uploaded by the role in the grid column title</message>
+	<message key="editor.monograph.legend.uploaded">Die Spaltentitel stehende Rolle hat eine Datei hochgeladen</message>
 
 	<!-- Editorial related -->
-	<message key="editor.submission.introduction">Im Stadium 'Einreichung' bestimmt der/die zuständige Herausgeber/in nach Prüfung der eingereichten Dateien das weitere Vorgehen, indem er/sie eine passende Aktion auswählt (der Autor/die Autorin wird darüber grundsätzlich informiert): Zur internen Begutachtung senden (anschließend müssen die für die interne Begutachtung vorgesehenen Dateien ausgewählt werden); Zur externen Begutachtung senden (anschließend müssen die für die externe Begutachtung vorgesehenen Dateien ausgewählt werden); Manuskript annnehmen (anschließend sind die Dateien für die redaktionelle Bearbeitung auszuwählen) oder Manuskript ablehnen (das Manuskript wird im Archiv abgelegt).</message>
-	<message key="editor.submission.editorial.finalDraftDescription"><![CDATA[Bei Sammelbänden, deren Kapitel von unterschiedlichen Autor/innen stammen, kann die eingereichte Manuskriptdatei zum Lektorieren in Kapiteldateien aufgesplittet werden. Die lektorierten Kapiteldateien werden unter <span class="pkp_help_title">Copyediting</span> hochgeladen und anschließend von den jeweiligen Kapitelautor/innen geprüft.]]></message>
-	<message key="editor.monograph.editorial.fairCopy">Reinschrift</message>
-	<message key="editor.monograph.editorial.fairCopyDescription">Der/die Lektor/in lädt eine Reinschrift des Manuskripts zur Begutachtung durch den/die Herausgeber/in hoch, bevor es in die Herstellung geschickt wird.</message>
+	<message key="editor.submission.introduction">In der Phase 'Einreichung' bestimmt der/die zuständige Herausgeber/in nach Prüfung der eingereichten Dateien das weitere Vorgehen, indem er/sie eine passende Aktion auswählt (der Autor/die Autorin wird darüber grundsätzlich informiert): Zur internen Begutachtung senden (anschließend müssen die für die interne Begutachtung vorgesehenen Dateien ausgewählt werden); Zur externen Begutachtung senden (anschließend müssen die für die externe Begutachtung vorgesehenen Dateien ausgewählt werden); Manuskript annnehmen (anschließend sind die Dateien für die redaktionelle Bearbeitung auszuwählen) oder Manuskript ablehnen (das Manuskript wird im Archiv abgelegt).</message>
+	<message key="editor.submission.editorial.finalDraftDescription"><![CDATA[Bei Sammelbänden, deren Kapitel von unterschiedlichen Autor/innen stammen, kann die eingereichte Manuskriptdatei zum Lektorieren in Kapiteldateien aufgesplittet werden. Die lektorierten Kapiteldateien werden unter <span class="pkp_help_title">Lektorat</span> hochgeladen und anschließend von den jeweiligen Kapitelautor/innen geprüft.]]></message>
+	<message key="editor.monograph.editorial.fairCopy">Lektorierte Fassung</message>
+	<message key="editor.monograph.editorial.fairCopyDescription">Der/die Lektor/in lädt das von ihm überarbeitete Manuskript zur Prüfung an den Herausgeber/die Herausgeberin hoch, bevor es in die Herstellung geschickt wird.</message>
 
 	<!-- Production/Proof related -->
-	<message key="editor.submission.production.introduction"><![CDATA[In der Herstellung wählt der/die Herausgeber/in unter <span class="pkp_help_title"> Format</span> die gewünschten Buchformate (digital, Paperback etc.) aus. Der/die Layouter/in formt entsprechend den spezifischen Anforderungen an das jeweilige Format die druckfertigen Dateien zu Dateien in Publikationsqualität um. Diese werden dann für jedes Format einzeln unter <span class="pkp_help_title">Korrekturfahnen </span> hochgeladen und dort Korrektur gelesen. Das Buch wird für jedes Format einzeln unter <span class="pkp_help_title">Format</span> <em>verfügbar</em> gemacht (also veröffentlicht). Dazu muss bei den <em>Korrekturdateien</em> bei 'Akzeptiert" und im Katalog bei "Erstelle anhand der angegebenen Metadaten einen neuen Katalogeintrag" ein Häkchen gesetzt werden.]]></message>
+	<message key="editor.submission.production.introduction"><![CDATA[In der Herstellung wählt der Herausgeber/die Herausgeberin unter <span class="pkp_help_title"> Format</span> die gewünschten Formate (digital, Paperback etc.) aus. Der Layouter/die Layouterin passt die Dateien an die spezifischen Anforderungen des jeweiligen Zielformats an. Diese werden dann für jedes Format einzeln unter <span class="pkp_help_title">Korrekturfahnen </span> hochgeladen und dort Korrektur gelesen. Das Buch wird für jedes Format einzeln unter <span class="pkp_help_title">Format</span> <em>verfügbar</em> gemacht (also veröffentlicht). Dazu muss bei den <em>Korrekturdateien</em> bei 'Akzeptiert" und im Katalog bei "Erstelle anhand der angegebenen Metadaten einen neuen Katalogeintrag" ein Häkchen gesetzt werden.]]></message>
 	<message key="editor.submission.production.productionReadyFilesDescription"><![CDATA[Der Layouter/die Layouterin gestaltet diese Dateien für jedes Format und lädt sie dann als <span class="pkp_help_title">Korrekturfahnen</span> zum Korrekturlesen hoch.]]></message>
 	<message key="editor.monograph.proofs">Korrekturfahnen</message>
 	<message key="editor.monograph.production.approvalAndPublishing">Freigabe und Veröffentlichung</message>
-	<message key="editor.monograph.production.approvalAndPublishingDescription">Verschiedene Formate wie zum Beispiel Hardcover, Softcover und digitale Formate können unten unter 'Formate' hochgeladen werden. Sie können die Formate-Tabelle als Checkliste verwenden, um zu prüfen, was noch für die Veröffentlichung im ausgewählten Format getan werden muss.</message>
+	<message key="editor.monograph.production.approvalAndPublishingDescription">Verschiedene Formate wie zum Beispiel Hardcover, Softcover und digitale Formate können unter 'Formate' hochgeladen werden. Sie können die Formate-Tabelle als Checkliste verwenden, um zu prüfen, was noch für die Veröffentlichung im ausgewählten Format getan werden muss.</message>
 	<message key="editor.monograph.production.publicationFormatDescription"><![CDATA[Fügen Sie Formate (z.B. digital, Paperback) hinzu, für die der Layouter Korrekturfahnen zum Korrekturlesen erstellen soll. Die <em>Korrekturdateien</em> müssen als "akzeptiert" gekennzeichnet und die Metadaten im <em>Katalog</em> aufgenommen und zur Veröffentlichung freigegeben worden sein, damit das Buch als <em>verfügbar</em> angezeigt (das heißt 'veröffentlicht') werden kann.]]></message>
 	<message key="editor.monograph.approvedProofs.edit">Bedingungen für den Download festlegen</message>
 	<message key="editor.monograph.approvedProofs.edit.linkTitle">Bestimmungen festlegen</message>
 	<message key="editor.monograph.proof.addNote">Antwort hinzufügen</message>
 
 	<!-- Review related -->
-	<message key="editor.internalReview.introduction">In der Internen Begutachtung weist der/die Herausgeber/in den Gutachter/innen intern Manuskriptdateien zu und berücksichtigt die Begutachtungsergebnisse, bevor er/sie zum nächsten Schritt übergeht (über den der Autor/die Autorin benachrichtigt wird). Zur Auswahl stehen folgende Optionen: Überarbeitung anfordern (die überarbeiteten Manuskripte werden in diesem Fall nur von der/dem Herausgeber/in überprüft); Erneut zur Begutachtung einreichen (die überarbeitete Manuskripten gehen dann in eine neue Begutachtungsrunde); Zur externen Begutachtung senden (dazu müssen Dateien ausgewählt werden, die extern begutachtet werden sollen); Manuskript annehmen (dazu müssen Dateien für den Veröffentlichungsprozess ausgewählt werden) oder Manuskript ablehnen (das Manuskript wird archiviert).</message>
-	<message key="editor.externalReview.introduction">In der Externen Begutachtung weist der Herausgeber externen (nicht zum Verlag gehörenden) Gutachter/innen Manuskriptdateien zu und berücksichtigt deren Stellungnahmen, bevor er/sie zum nächsten Schritt übergeht (über den der Autor/die Autorin benachrichtigt wird): Überarbeitung anfordern (die überarbeiteten Manuskripte werden in diesem Fall nur von dem/der Herausgeber/in überprüft); Erneut zur Begutachtung einreichen (die überarbeitete Manuskripten gehen dann in eine neue Begutachtungsrunde); Manuskript annehmen (dazu müssen Dateien für den Veröffentlichungsprozess ausgewählt werden) oder Manuskript ablehnen (das Manuskript wird archiviert).</message>
+	<message key="editor.internalReview.introduction">In der Internen Begutachtung weist der Herausgeber den Gutachtern intern Manuskriptdateien zu und berücksichtigt die Begutachtungsergebnisse, bevor er zum nächsten Schritt übergeht (über den der Autor/die Autorin benachrichtigt wird). Zur Auswahl stehen folgende Optionen: Überarbeitung anfordern (die überarbeiteten Manuskripte werden in diesem Fall nur vom Herausgeber überprüft); Erneut zur Begutachtung einreichen (die überarbeitete Manuskripten gehen dann in eine neue Begutachtungsrunde); Zur externen Begutachtung senden (dazu müssen Dateien ausgewählt werden, die extern begutachtet werden sollen); Manuskript annehmen (dazu müssen Dateien für den Veröffentlichungsprozess ausgewählt werden) oder Manuskript ablehnen (das Manuskript wird archiviert).</message>
+	<message key="editor.externalReview.introduction">In der Externen Begutachtung weist der Herausgeber externen (nicht zum Verlag gehörenden) Gutachter/innen Manuskriptdateien zu und berücksichtigt deren Stellungnahmen, bevor er zum nächsten Schritt übergeht (über den der Autor/die Autorin benachrichtigt wird): Überarbeitung anfordern (die überarbeiteten Manuskripte werden in diesem Fall nur von dem/der Herausgeber/in überprüft); Erneut zur Begutachtung einreichen (die überarbeitete Manuskripten gehen dann in eine neue Begutachtungsrunde); Manuskript annehmen (dazu müssen Dateien für den Veröffentlichungsprozess ausgewählt werden) oder Manuskript ablehnen (das Manuskript wird archiviert).</message>
 </locale>
