--- a/locale/de_DE/submission.xml
+++ b/locale/de_DE/submission.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE locale SYSTEM "../../lib/pkp/dtd/locale.dtd">
 
 <!--
@@ -20,7 +20,7 @@
 	<message key="submission.select">Wählen Sie ein Manuskript aus</message>
 	<message key="submission.synopsis">Über dieses Buch</message>
 	<message key="submission.workflowType">Art des Buches</message>
-	<message key="submission.workflowType.description">Eine Monografie ist ein Werk, das von einer Autorin/einem Autor oder mehreren Autor/innen gemeinsam verfasst worden ist. Ein Sammelband besteht aus mehreren Kapiteln jeweils unterschiedlicher Autor/innen (detaillierte Kapitelangaben sind erst zu einem späteren Zeitpunkt im Veröffentlichungsprozess zu machen).</message>
+	<message key="submission.workflowType.description">Eine Monografie ist ein Werk, das von einem Autor oder von mehreren Autoren gemeinsam verfasst wurde. Ein Sammelband besteht aus mehreren Kapiteln jeweils unterschiedlicher Autor/innen (genaue Angaben zu den einzelnen Kapiteln sind erst auf den folgenden Seiten einzutragen).</message>
 	<message key="submission.workflowType.editedVolume">Sammelband</message>
 	<message key="submission.workflowType.authoredWork">Monografie</message>
 	<message key="submission.monograph">Monografie</message>
@@ -29,7 +29,7 @@
 	<message key="submission.artwork.permissions">Rechte</message>
 	<message key="submission.chapter">Kapitel</message>
 	<message key="submission.chapters">Kapitel</message>
-	<message key="submission.chaptersDescription">Hier können Sie die Kapitel auflisten und ihnen Personen zuordnen, die in der oben stehenden Liste der Beiträger/innen (z.B. Kapitelautor/innen, Übersetzer/innen) verzeichnet sind. Beiträger/innen, die Sie an dieser Stelle dem Kapitel zuordnen, werden während des Veröffentlichungsprozesses Zugang zu dem Kapitel haben.</message>
+	<message key="submission.chaptersDescription">Hier können Sie die Kapitel auflisten und ihnen Personen zuordnen, die in der oben stehenden Liste der Beiträger/innen (z.B. Kapitelautoren, Übersetzer) verzeichnet sind. Beiträger/innen, die Sie an dieser Stelle dem Kapitel zuordnen, können während des Veröffentlichungsprozesses auf dieses Kapitel  zugreifen.</message>
 	<message key="submission.chapter.addChapter">Kapitel hinzufügen</message>
 	<message key="submission.chapter.editChapter">Kapitel bearbeiten</message>
 	<message key="submission.copyedit">Lektorat</message>
@@ -44,7 +44,7 @@
 	<message key="submission.confirmSubmit">Sind Sie sicher, dass Sie das Manuskript einreichen möchten?</message>
 	<message key="submission.metadata">Metadaten</message>
 	<message key="submission.supportingAgencies">Träger</message>
-	<message key="grid.action.addChapter">Ein neues Kapitel erzeugen</message>
+	<message key="grid.action.addChapter">Ein neues Kapitel hinzufügen</message>
 	<message key="grid.action.editChapter">Kapitel bearbeiten</message>
 	<message key="grid.action.deleteChapter">Kapitel löschen</message>
 
@@ -53,18 +53,18 @@
 	<message key="submission.submit.newSubmissionMultiple">Ein neues Buchmanuskript einreichen bei</message>
 	<message key="submission.submit.newSubmissionSingle">Ein neues Manuskript bei {$contextName} einreichen</message>
 	<message key="submission.submit.upload">Upload</message>
-	<message key="submission.submit.upload.description">Hochladen von Dateien, die im Zusammenhang mit der Einreichung stehen wie z.B. Manuskript, Exposé, Anschreiben, Bildmaterial. Es empfiehlt sich, sowohl bei Monografien als auch bei Sammelbänden das gesamte Manuskript in einer Datei hochzuladen.</message>
+	<message key="submission.submit.upload.description">Dateiupload. Sie können alle Arten von  Dateien hochladen, die im Zusammenhang mit der Einreichung stehen:  Manuskripte, Exposés, Anschreiben, Bildmaterial usw.. Es empfiehlt sich, das gesamte Manuskript in einer Datei hochzuladen, egal ob es sich um eine Monografie oder einen Sammelband handelt.</message>
 	<message key="submission.submit.cancelSubmission">Sie können den Einreichungsprozess auch zu einem späteren Zeitpunkt abschließen. Gehen Sie dazu auf die Startseite und wählen Sie die entsprechenden Manuskripte aus.</message>
 	<message key="submission.submit.copyrightNoticeAgree">Ich erkenne die Datenschutzbestimmungen an.</message>
 	<message key="submission.submit.selectSeries">Reihe auswählen</message>
 	<message key="submission.submit.seriesPosition">Position innerhalb der Reihe (z.B. Band 2)</message>
 	<message key="submission.submit.form.localeRequired">Bitte wählen Sie die Sprache des Manuskripts aus.</message>
 	<message key="submission.submit.submissionChecklist">Checkliste für den Einreichungsprozess</message>
-	<message key="submission.submit.submissionChecklistDescription">Die eingereichten Manuskripte müssen den folgenden Vorgaben entsprechen. Um fortfahren zu können, müssen Sie die Erfüllung der Vorgaben bestätigen (Kommentare an die Redaktion können unten hinzugefügt werden).</message>
+	<message key="submission.submit.submissionChecklistDescription">Bitte bestätigen Sie, dass folgende Vorgaben eingehalten wurde (Für ergänzende Bemerkungen steht Ihnen das anschließende Feld "Vermerk für den Herausgeber" zur Verfügung).</message>
 	<message key="submission.submit.privacyStatement">Datenschutzerklärung</message>
 	<message key="submission.submit.contributorRole">Funktion des Beiträgers/der Beiträgerin</message>
 	<message key="submission.submit.form.authorRequired">Es muss mindestens ein Autor/eine Autorin angegeben werden.</message>
-	<message key="submission.submit.form.authorRequiredFields">Es werden Vorname, Nachname und E-Mail-Adresse aller Autor/innen benötigt.</message>
+	<message key="submission.submit.form.authorRequiredFields">Vorname, Nachname und E-Mail-Adresse aller Autor/innen werden benötigt.</message>
 	<message key="submission.submit.form.titleRequired">Bitte geben Sie den Titel Ihrer Monografie ein.</message>
 	<message key="submission.submit.form.abstractRequired">Bitte geben Sie eine kurze Zusammenfassung Ihrer Monografie ein.</message>
 	<message key="submission.submit.form.contributorRoleRequired">Bitte wählen Sie die Funktion der Beiträgerin/des Beiträgers.</message>
@@ -77,7 +77,7 @@
 	<message key="submission.submit.nextSteps">Die nächsten Schritte</message>
 	<message key="submission.submit.coverNote">Vermerk für den/die Herausgeber/in</message>
 	<message key="submission.submit.generalInformation">Allgemeine Informationen</message>
-	<message key="submission.submit.whatNext.description">Der Verlag wurde über die Einsendung Ihres Manuskriptes informiert. Für Ihre Unterlagen haben wir Ihnen eine Bestätigung per E-Mail zugesandt. Sobald der/die Herausgeber/in das Manuskript geprüft hat, wird er sich mit Ihnen in Verbindung setzen.</message>
+	<message key="submission.submit.whatNext.description">{$contextName}wurde über die Einsendung Ihres Manuskriptes informiert. Für Ihre Unterlagen haben wir Ihnen eine Bestätigung per E-Mail zugesandt. Sobald das Manuskript geprüft wurde, werden wir uns mit Ihnen in Verbindung setzen.</message>
 	<message key="submission.submit.checklistErrors">Bitte lesen und bestätigen Sie die Punkte der Einreichungscheckliste. {$itemsRemaining} Punkte wurden bisher noch nicht bestätigt.</message>
 	<message key="submission.submit.placement">Manuskriptplatzierung</message>
 	<message key="submission.submit.placement.seriesDescription">Wenn das Buch in einer Reihe erscheinen soll ...</message>
@@ -98,7 +98,7 @@
 	<message key="submission.catalogEntry">Katalog</message>
 	<message key="submission.editCatalogEntry">Eintrag</message>
 	<message key="submission.catalogEntry.new">Neuer Katalogeintrag</message>
-	<message key="submission.catalogEntry.confirm">Erstelle anhand der angegebenen Metadaten einen neuen Katalogeintrag.</message>
+	<message key="submission.catalogEntry.confirm">Anhand der angegebenen Metadaten einen neuen Katalogeintrag erstellen.</message>
 	<message key="submission.catalogEntry.confirm.required">Bitte bestätigen Sie, dass der Publikationsprozess abgeschlossen ist und das Buch in den Katalog aufgenommen werden soll.</message>
 	<message key="submission.catalogEntry.isAvailable">Diese Monografie ist fertig und soll in den öffentlichen Katalog aufgenommen werden.</message>
 
